# Intervuo

./: .env  .env.example  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: django.yml
backend/: .env.example  .gitignore  Dockerfile  Dockerfile.celery  README.md  docker-entrypoint.sh  pyproject.toml
backend/accounts/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_remove_user_is_email_confirmed.py
backend/accounts/urls/: base.py  custom.py
backend/config/: __init__.py  settings.py  urls.py
backend/console/: apps.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/console/ai/: generate_init_message.py  generate_text.py  get_info_from_user.py
backend/console/migrations/: 0001_initial.py  0002_alter_behaviour_agent_greeting_and_more.py  0002_rename_custom_knowlegde_knowledge_custom_knowledge_and_more.py  0003_alter_knowledgefiles_knowledge.py  0003_applicant_session.py  0004_applicant_excitement_applicant_impressive_work_and_more.py  0005_alter_applicant_name_alter_behaviour_agent_greeting_and_more.py  0006_alter_applicant_name.py  0007_alter_identity_avatar.py  0008_alter_applicant_email_alter_session_applicant.py
backend/console/signals/: handlers.py
frontend/: .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/components/: Agent.jsx  My-agents.jsx  Sidebar.jsx
frontend/lib/: GenerateAvatar.js
presentation/: content.md  outline.md  package-lock.json  package.json
(+24 files in other folders)
